Added view HTML to app module. Misc fix

--- a/front-end/angular/src/app/favoriteslist/favoriteslist.component.html
+++ b/front-end/angular/src/app/favoriteslist/favoriteslist.component.html
@@ -1,1 +1,38 @@
-<p>favoriteslist works!</p>
+<div class="navbar-bottom" aria-label="secondary-navigation">
+    <div class="container p-3">
+        <h3>Favorites List</h3>
+        <!-- Large button groups (default and split) -->
+        <div class="btn-group">
+            <button class="btn btn-info btn-md dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Genre
+            </button>
+            <ul class="dropdown-menu dropdown-menu-dark p-2" class="list-group list-group-horizontal">
+                <li><div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            <a class="dropdown-item rounded-2" href="#">Action</a>
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="btn-group">
+            <button class="btn btn-info btn-md dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Movies
+            </button>
+            <ul class="dropdown-menu dropdown-menu-dark p-2">
+                <li><a class="dropdown-item rounded-2" href="#">All</a></li>
+                <li><a class="dropdown-item rounded-2" href="#">Movies</a></li>
+                <li><a class="dropdown-item rounded-2" href="#">TV-Shows</a></li>
+            </ul>
+        </div>
+        On
+        <div class="btn-group">
+            <button class="btn btn-info btn-md dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Providers
+                </button>
+            <ul class="dropdown-menu dropdown-menu-dark">
+            </ul>
+        </div>    
+    </div>
+</div> 
