--- a/front-end/angular/src/app/homepage/homepage.component.css
+++ b/front-end/angular/src/app/homepage/homepage.component.css
@@ -1,10 +1,4 @@
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: darkblue;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
+ /* Style the links inside the navigation bar
   .topnav a {
     float: left;
     color: white;
@@ -12,16 +6,24 @@
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
+  } */
   
-  /* Change the color of links on hover */
+  /* Change the color of links on hover
   .topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
+  } */
   
-  /* Add a color to the active/current link */
+  /* Add a color to the active/current link
   .topnav a.active {
     background-color: #020069;
     color: white;
+  } */
+  body {
+    background-color: #20243b;
+    font-family: Arial, sans-serif;
+  }
+    .main-contents {
+      background: linear-gradient(to bottom, #20243b, #040A18);
+      color: #fff;
   }
