--- a/stream-central-app/src/app/app.component.html
+++ b/stream-central-app/src/app/app.component.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home2</title>
+<title>Stream Central</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
 <style>
@@ -203,8 +203,7 @@
 </style>
 </head>
 <body>
-<div class="container"><app-nav-bar></app-nav-bar></div>
-<div class="container"><app-home-page></app-home-page></div>
+<app-nav-bar></app-nav-bar>
 
 <!-- Bootstrap core JavaScript
     ================================================== -->
