chore: misc bug fixes, data-binded with server.

--- a/front-end/angular/src/app/app.component.html
+++ b/front-end/angular/src/app/app.component.html
@@ -8,16 +8,13 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
               <ul class="navbar-nav me-auto py-1 justify-content-start">
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/">Home</a>
+                      <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Movies</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">TV-Shows</a>
+                      <a class="nav-link" routerLink="/movies">Movies</a>
                   </li>
                   <li class="nav-item me-5">
-                      <a class="nav-link" href="favorites_page.html">Favorites List</a>
+                      <a class="nav-link" routerLink="/favorites">Favorites List</a>
                   </li>
               </ul>
               <form class="col col-sm-auto col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
