--- a/front-end/angular/src/app/favoriteslist/favoriteslist.component.html
+++ b/front-end/angular/src/app/favoriteslist/favoriteslist.component.html
@@ -36,3 +36,75 @@
         </div>    
     </div>
 </div> 
+<section class="album-contents p-4 border-bottom border-info">
+    <div class="container">
+        <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5  gx-2 gy-5">
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+            <div class="col-sm-auto">
+                <div class="card">
+                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
+                </div>
+            </div>
+        </div>
+    </div> 
+    <button class="btn btn-primary" (click)="clickEvent()">Button</button> 
+</section>
