--- a/front-end/angular/src/app/movie/movie.component.html
+++ b/front-end/angular/src/app/movie/movie.component.html
@@ -1,1 +1,22 @@
-<p>movie works!</p>
+<div class="container py-2 pb-3">
+    <div class="card mb-3">
+    <img class="card-img-top" src="" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title">{{title}}</h5>
+        <div>
+            <button type="button" class="btn btn-sm btn-outline-primary"> Action</button>
+            <button type="button" class="btn btn-sm btn-outline-primary"> 01:33</button>
+            <button type="button" class="btn btn-sm btn-outline-primary"> PG-13</button>
+            <button type="button" class="btn btn-sm btn-outline-primary"> 2023</button>
+            <button type="button" class="btn btn-sm btn-outline-primary"> IMDB: 80/100</button>
+            <button type="button" class="btn btn-sm btn-outline-primary"> Rotten Tomatoes: 90/100</button>
+            <p class="card-text">{{description}}</p>
+        </div>
+        <h5>Providers</h5>
+        <div>
+            <button type="button" class="btn btn-sm btn-outline-primary"> Netflix</button>
+            <button type="button" class="btn btn-sm btn-outline-primary"> Hulu</button>
+            <button type="button" class="btn btn-sm btn-outline-primary"> Prime</button>
+        </div>
+    </div>
+</div>
