--- a/front-end/angular/src/app/homepage/homepage.component.html
+++ b/front-end/angular/src/app/homepage/homepage.component.html
@@ -1,96 +1,18 @@
 <body>
   <section class="main-contents p-4 border-bottom border-info">
     <div class="container py-4">
-        <div id="main" class="row">
-            <div id="recently-section" class="col">
-                <h2 class="album-title">Recently Updated</h2>
-                <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-5 mb-5">
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
+        <h1 class="section-title">Recently Updated</h1>
+        <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
+            <div *ngFor="let result of allMovies ;" class="wrapper">
+                <div class="col">
+                    <div class="card">
+                        <img src={{result.poster}} class="card-img-top" alt="...">
                     </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
+                    <div class="card-title"><h3>{{result.title}}</h3></div>
                 </div>
-                <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-5">
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                    <div class="col-sm-auto">
-                        <div class="card">
-                            <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                        </div>
-                        <div class="content-title py-1 ps-1">
-                            <h5 class="card-title">Content Title</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>           
+            </div>
         </div>
-    </div> 
+    </div>
   </section>
 </body>
 
