--- a/angular-app/angular/src/app/homepage/homepage.component.html
+++ b/angular-app/angular/src/app/homepage/homepage.component.html
@@ -1,14 +1,14 @@
 <body>
   <section class="main-contents p-4 border-bottom border-info">
     <div class="container py-4">
-        <h1 class="section-title">Recently Updated</h1>
+        <h1 class="section-title"></h1>
         <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
-            <div *ngFor="let result of allMovies ;" class="wrapper">
+            <div *ngFor="let content of allMovies ;" class="wrapper">
                 <div class="col">
                     <div class="card">
-                        <img src={{result.poster}} class="card-img-top" alt="...">
+                        <img src={{content.poster}} class="card-img-top" alt="...">
                     </div>
-                    <div class="card-title"><h3>{{result.title}}</h3></div>
+                    <div class="card-title"><h3>{{content.title}}</h3></div>
                 </div>
             </div>
         </div>
