Added 'contents.ts' interface for data normalization. Refactored the movieproxyservice to use Observables to fetch indivial movie. Configured routes to handle event (click) on details to navigate to that specific content. Added structure for filtering capabilities.

--- a/angular-app/angular/src/app/app.component.html
+++ b/angular-app/angular/src/app/app.component.html
@@ -1,12 +1,13 @@
 <div class="topnav">
     <nav class="navbar navbar navbar-expand-lg navbar-dark border-bottom border-info">
       <div class="container">
-          <a class="navbar-brand fw-bold text-info" href="#">StreamCentral</a>
+          <a [routerLink]="['']" class="navbar-brand fw-bold text-info">
+            StreamCentral</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-              <ul class="navbar-nav me-auto py-1 justify-content-start">
+          <div class="collapse navbar-collapse justify-content-md center" id="navbarNav">
+              <ul class="navbar-nav me-auto py-1">
                   <li class="nav-item">
                       <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
                   </li>
@@ -17,12 +18,12 @@
                       <a class="nav-link" routerLink="/favorites">Favorites List</a>
                   </li>
               </ul>
-              <form class="col col-sm-auto col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+              <!-- <form class="col col-sm-auto col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                   <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-              </form>
+              </form> -->
               <button type="button" class="btn btn-outline-info">Login</button>
           </div>
       </div>
   </nav>
 </div>
-<router-outlet />
+<router-outlet></router-outlet>
