--- a/angular-app/angular/src/app/homepage/homepage.component.css
+++ b/angular-app/angular/src/app/homepage/homepage.component.css
@@ -1,8 +1,68 @@
-   body {
-    background-color: #20243b;
-    font-family: Arial, sans-serif;
-  }
-    .main-contents {
-      background: linear-gradient(to bottom, #20243b, #040A18);
-      color: #fff;
-  }
+.results {
+  background: linear-gradient(to bottom, #20243b, #040A18);
+  color: #fff;
+}
+.content-listing {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.search-form {
+  background-color: rgb(81, 225, 148);
+  padding: 10px;
+  align-items: center;
+}
+
+.search-form form {
+  display: flex;
+  align-items: center;
+}
+
+.search-form input[type="search"] {
+  width: 200px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 10px;
+}
+
+.search-form button {
+  padding: 8px 16px;
+  background-color: #159fb4;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.search-form button:hover {
+  background-color: #94ebf3;
+}
+
+.section-title {
+  text-align: start;
+  margin-bottom: 20px;
+}
+
+.wrapper {
+  margin-bottom: 20px;
+}
+.card {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 100%;
+}
+
+.card-title {
+  text-align: center;
+  margin-top: 10px;
+}
