--- a/angular-app/angular/src/app/favoriteslist/favoriteslist.component.html
+++ b/angular-app/angular/src/app/favoriteslist/favoriteslist.component.html
@@ -1,110 +1,17 @@
-<div class="navbar-bottom" aria-label="secondary-navigation">
-    <div class="container p-3">
-        <h3>Favorites List</h3>
-        <!-- Large button groups (default and split) -->
-        <div class="btn-group">
-            <button class="btn btn-info btn-md dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Genre
-            </button>
-            <ul class="dropdown-menu dropdown-menu-dark p-2" class="list-group list-group-horizontal">
-                <li><div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        <label class="form-check-label" for="flexCheckDefault">
-                            <a class="dropdown-item rounded-2" href="#">Action</a>
-                        </label>
-                    </div>
-                </li>
-            </ul>
+<!-- <section class="album-contents p-4 border-bottom border-info">
+  <div class="container py-4">
+    <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
+        <div *ngFor="let content of contents" class="wrapper">
+            <div class="col">
+                <div class="card">
+                    <a [routerLink]="['content', content._id]">
+                        <img src={{content.poster}} class="card-img-top" alt="...">
+                    </a>
+                </div>
+                <h3 class="content-title">{{content.title}}</h3>
+            </div>
         </div>
-        <div class="btn-group">
-            <button class="btn btn-info btn-md dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Movies
-            </button>
-            <ul class="dropdown-menu dropdown-menu-dark p-2">
-                <li><a class="dropdown-item rounded-2" href="#">All</a></li>
-                <li><a class="dropdown-item rounded-2" href="#">Movies</a></li>
-                <li><a class="dropdown-item rounded-2" href="#">TV-Shows</a></li>
-            </ul>
-        </div>
-        On
-        <div class="btn-group">
-            <button class="btn btn-info btn-md dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Providers
-                </button>
-            <ul class="dropdown-menu dropdown-menu-dark">
-            </ul>
-        </div>    
     </div>
-</div> 
-<section class="album-contents p-4 border-bottom border-info">
-    <div class="container">
-        <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5  gx-2 gy-5">
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col-sm-auto">
-                <div class="card">
-                  <img src="https://picsum.photos/300/175" class="card-img-top" alt="...">
-                </div>
-            </div>
-        </div>
-    </div> 
-    <button class="btn btn-primary" (click)="clickEvent()">Button</button> 
-</section>
+</div>
+</section> -->
+<p>favorites works!</p>
