--- a/angular-app/angular/src/app/homepage/homepage.component.css
+++ b/angular-app/angular/src/app/homepage/homepage.component.css
@@ -1,68 +1,57 @@
-.results {
-  background: linear-gradient(to bottom, #20243b, #040A18);
-  color: #fff;
-}
-.content-listing {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 20px;
-}
-
-.search-form {
-  background-color: rgb(81, 225, 148);
-  padding: 10px;
-  align-items: center;
-}
-
-.search-form form {
-  display: flex;
-  align-items: center;
-}
-
-.search-form input[type="search"] {
-  width: 200px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-right: 10px;
-}
-
-.search-form button {
-  padding: 8px 16px;
-  background-color: #159fb4;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.search-form button:hover {
-  background-color: #94ebf3;
-}
-
-.section-title {
-  text-align: start;
-  margin-bottom: 20px;
-}
-
 .wrapper {
   margin-bottom: 20px;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
+
 .card {
+  position: relative;
   width: 100%;
   height: 100%;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  overflow: hidden;
+  border-radius: 2px;
+  transition: box-shadow 0.3s ease;
 }
 
-.card-img-top {
-  width: 100%;
-  height: 100%;
+.wrapper:hover .card { 
+  box-shadow: 0 0 15px #3ce8ffcb; 
+  transform: scale(1.03); 
 }
 
-.card-title {
+.content-title {
   text-align: center;
-  margin-top: 10px;
+  margin: 10px 0;
+}
+
+.favorite-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px; 
+  background-color: transparent; 
+  color: #ffffff; 
+  border: 2px solid #ffffff;
+  border-radius: 50%; 
+  width: 35px;
+  height: 35px; 
+  line-height: 40px;
+  text-align: center; 
+  font-size: 24px; 
+  cursor: pointer; 
+  transition: background-color 0.2s, transform 0.3s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.favorite-btn:hover {
+  background-color: #00ff88b7;
+  transform: scale(1.1); 
+}
+
+.favorite-btn::before {
+  content: '+';
+}
+
+.favorite-btn:focus {
+  outline: none; 
 }
