--- a/angular-app/angular/src/app/homepage/homepage.component.html
+++ b/angular-app/angular/src/app/homepage/homepage.component.html
@@ -6,18 +6,47 @@
         </form>
     </div>
 </section>
+<section class="content-filter container">
+    <div class="btn-group">
+        <button type="button" class="btn btn-lg btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+            All
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item rounded-2" href="#">Action</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Comedy</a></li>
+        </ul>
+    </div>
+    <div class="btn-group">
+        <button type="button" class="btn btn-lg btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+            Movies
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item rounded-2" href="#">Action Movies</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Comedy Movies</a></li>
+        </ul>
+    </div>
+    <div class="btn-group">
+        <button type="button" class="btn btn-lg btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+            Providers
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark">
+            <li><a class="dropdown-item rounded-2" href="#">Netflix</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Amazon Prime</a></li>
+        </ul>
+    </div>
+</section>
 <section class="results p-4 border-bottom border-info">
     <div class="container py-4">
-        <h1 class="section-title">Recently Updated</h1>
         <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
-            <div *ngFor="let content of filteredContents;" class="wrapper">
+            <div *ngFor="let content of filteredContents" class="wrapper">
                 <div class="col">
                     <div class="card">
-                        <img src={{content.poster}} class="card-img-top" alt="...">
+                        <a [routerLink]="['content', content.tmdb_id]">
+                            <img src={{content.poster}} class="card-img-top" alt="...">
+                            <button class="favorite-btn"></button>
+                        </a>
                     </div>
-                    <h2 class="content-title">{{content.title}}</h2>
-                    <button class="btn btn-primary" [routerLink]="['content', content._id]" 
-                    [routerLinkActive]="'active'">Details</button>
+                    <h3 class="content-title">{{content.title}}</h3>
                 </div>
             </div>
         </div>
