--- a/angular-app/angular/src/app/app.component.html
+++ b/angular-app/angular/src/app/app.component.html
@@ -1,36 +1,43 @@
-<div class="topnav">
-    <nav class="navbar navbar navbar-expand-lg navbar-dark border-bottom border-info">
-      <div class="container">
-          <a [routerLink]="['']" class="navbar-brand fw-bold text-info">
-            StreamCentral</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-md center" id="navbarNav">
-              <ul class="navbar-nav me-auto py-1">
-                  <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" routerLink="/movies">Movies</a>
-                  </li>
-                  <li class="nav-item me-5">
-                      <a class="nav-link" routerLink="/favorites">Favorites List</a>
-                  </li>
-              </ul>
-              <form class="col col-sm-auto col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                  <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-              </form>
-              <button type="button" class="btn btn-outline-info">Login</button>
+<main>
+    <div class="topnav">
+        <nav class="navbar navbar navbar-expand-lg navbar-dark border-bottom border-info">
+          <div class="container">
+              <a [routerLink]="['']" class="navbar-brand fw-bold text-info">
+                StreamCentral</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-md center" id="navbarNav">
+                  <ul class="navbar-nav me-auto py-1">
+                      <li class="nav-item">
+                          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" routerLink="/movies">Movies</a>
+                      </li>
+                      <li class="nav-item me-5">
+                          <a class="nav-link" routerLink="/favorites">Favorites List</a>
+                      </li>
+                  </ul>
+                  <form class="col col-sm-auto col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                      <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+                  </form>
+                  <!-- <div class="nav-bottom container">
+                    <form>
+                        <input type="search" placeholder="Search by Title" #filter>
+                        <button class="info" type="button" (click)="filterResults(filter.value)">Search</button>
+                    </form>
+                </div> -->
+              </div>
           </div>
-      </div>
-  </nav>
-</div>
-<body>
-    <router-outlet></router-outlet>
-    <footer class="footer">
-        <div class="container-fluid p-5">
-        <p class="text-center">StreamCentral &copy; 2024</p>
-        </div>
-    </footer>
-</body>
+      </nav>
+    </div>
+    <body>
+        <router-outlet></router-outlet>
+        <footer class="footer">
+            <div class="container-fluid p-5">
+            <p class="text-center">StreamCentral &copy; 2024</p>
+            </div>
+        </footer>
+    </body>
+</main>
