--- a/angular-app/angular/src/app/favoriteslist/favoriteslist.component.html
+++ b/angular-app/angular/src/app/favoriteslist/favoriteslist.component.html
@@ -1,17 +1,17 @@
-<!-- <section class="album-contents p-4 border-bottom border-info">
-  <div class="container py-4">
-    <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
-        <div *ngFor="let content of contents" class="wrapper">
-            <div class="col">
-                <div class="card">
-                    <a [routerLink]="['content', content._id]">
-                        <img src={{content.poster}} class="card-img-top" alt="...">
-                    </a>
+<section>
+    <div class="container py-4">
+        <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
+            <div *ngFor="let content of favorites" class="wrapper">
+                <div class="col">
+                    <div class="card">
+                        <a [routerLink]="['content', content.tmdb_id]">
+                            <img src={{content.poster}} class="card-img-top" alt="...">
+                            <button class="remove-btn" title="Remove from list"><i class='bx bx-check'></i></button>
+                        </a>
+                    </div>
+                    <h3 class="content-title">{{content.title}}</h3>
                 </div>
-                <h3 class="content-title">{{content.title}}</h3>
             </div>
         </div>
     </div>
-</div>
-</section> -->
-<p>favorites works!</p>
+</section>
