--- a/angular-app/angular/src/app/favoriteslist/favoriteslist.component.css
+++ b/angular-app/angular/src/app/favoriteslist/favoriteslist.component.css
@@ -7,7 +7,13 @@
     margin-bottom: 20px;
     transition: transform 0.3s, box-shadow 0.3s;
   }
-  
+
+  .section-title {
+    text-align: start;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 28px;
+  }
   .card {
     position: relative;
     width: 100%;
@@ -60,3 +66,4 @@
   .remove-btn:focus {
     outline: none; 
   }
+
