--- a/angular-app/angular/src/app/homepage/homepage.component.html
+++ b/angular-app/angular/src/app/homepage/homepage.component.html
@@ -1,32 +1,34 @@
-<section class="search-form">
-    <div class="nav-bottom container">
-        <form>
-            <input type="search" placeholder="Search by Title" #filter>
-            <button class="btn" type="button" (click)="filterResults(filter.value)">Search</button>
-        </form>
-    </div>
-</section>
-<section class="content-filter container">
+
+<section class="content-filter container-fluid">
     <div class="btn-group">
-        <button type="button" class="btn btn-lg btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
             All
         </button>
         <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item rounded-2" href="#">Action</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Animation</a></li>
             <li><a class="dropdown-item rounded-2" href="#">Comedy</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Drama</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Fantasy</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Horror</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Mystery</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Romance</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Sci-Fi</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">Thriller</a></li>
+            <li><a class="dropdown-item rounded-2" href="#">More</a></li>
         </ul>
     </div>
     <div class="btn-group">
-        <button type="button" class="btn btn-lg btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-            Movies
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+            {{ filter.value === 'tv-show' ? 'TV-Shows' : 'Movies' }}
         </button>
         <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item rounded-2" href="#">Action Movies</a></li>
-            <li><a class="dropdown-item rounded-2" href="#">Comedy Movies</a></li>
+            <li><a class="dropdown-item rounded-2" href="#" (click)="filterByType('movie')">Movies</a></li>
+            <li><a class="dropdown-item rounded-2" href="#" (click)="filterByType('tv-show')">TV-Shows</a></li>
         </ul>
     </div>
     <div class="btn-group">
-        <button type="button" class="btn btn-lg btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
             Providers
         </button>
         <ul class="dropdown-menu dropdown-menu-dark">
@@ -34,22 +36,49 @@
             <li><a class="dropdown-item rounded-2" href="#">Amazon Prime</a></li>
         </ul>
     </div>
+    <div class="search-filter me-5">
+        <form (submit)="filterResults(filter.value); $event.preventDefault()">
+            <div class="input-group">
+                <input type="search" class="form-control" placeholder="Search by Title" #filter>
+            </div>
+        </form>
+    </div>
+</section>
+<section class="ad-section">
+    <section class="ad-section-container">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="https://picsum.photos/1400/80" alt="ad-1" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
 </section>
 <section class="results p-4 border-bottom border-info">
+    <div *ngIf="filteredContents.length == 0" class="no-favorites text-center">
+        <h2>No results containing you search terms.</h2>
+        <p>Try different keywords</p>
+        <p>Try searching for a movie or TV show by title</p>
+        <p>Looking for a movie or TV show?</p>
+    </div>
     <div class="container py-4">
-        <div class="row row-cols-sm-1 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
-            <div *ngFor="let content of filteredContents" class="wrapper">
+        <div class="row row-cols-sm-2 row-cols-md-4 row-cols-lg-5 gx-2 gy-2">
+            <div *ngFor="let content of pagedItems" class="wrapper">
                 <div class="col">
-                    <div class="card">
+                    <div class="card card-results">
                         <a [routerLink]="['content', content.tmdb_id]">
                             <img src={{content.poster}} class="card-img-top" alt="...">
-                            <button class="favorite-btn" title="Add to Favorites"></button>
                         </a>
+                        <button class="favorite-btn" title="Add to Favorites" (click)="addToFavorites(content.tmdb_id); $event.stopPropagation()"></button>
                     </div>
                     <h3 class="content-title">{{content.title}}</h3>
                 </div>
             </div>
         </div>
+        <pagination class="justify-content-center home-pagination" [totalItems]="filteredContents.length" 
+            [itemsPerPage]="pageSize" (pageChanged)="setPage($event.page)">
+        </pagination>
     </div>
 </section>
 
