--- a/angular-app/angular/src/app/app.component.html
+++ b/angular-app/angular/src/app/app.component.html
@@ -14,6 +14,9 @@
                   <li class="nav-item">
                       <a class="nav-link" routerLink="/movies">Movies</a>
                   </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/tvshows">TV Shows</a>
+                    </li>
                   <li class="nav-item me-5">
                       <a class="nav-link" routerLink="/favorites">Favorites List</a>
                   </li>
