--- a/angular-app/angular/src/app/tvshows/tvshows.component.html
+++ b/angular-app/angular/src/app/tvshows/tvshows.component.html
@@ -9,7 +9,7 @@
                           <button class="favorite-btn"></button>
                       </a>
                   </div>
-                  <h3 class="content-title">{{content.original_name}}</h3>
+                  <h3 class="content-title">{{content.name}}</h3>
               </div>
           </div>
       </div>
