--- a/angular-app/angular/src/app/app.component.html
+++ b/angular-app/angular/src/app/app.component.html
@@ -25,7 +25,7 @@
               </div>
               
               <ng-template #signInButton>
-                <a routerLink="/login">Login</a>
+                <button [routerLink]="['/login']" class="btn btn-info">Login</button>
               </ng-template>
           </div>
         </nav>
