--- a/angular-app/angular/src/app/login/login.component.css
+++ b/angular-app/angular/src/app/login/login.component.css
@@ -1,11 +1,12 @@
 .login-container {
-    box-shadow:  0 0 15px #3ce8ffcb;
+    box-shadow:  0 0 10px #3ce8ffcb;
     display: block;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 40%;
-    background-color: #f5f5f5;
+    padding: 50px;
+    background-color: #040A18;
 }
 .login-row{
     display: flex;
