--- a/angular-app/angular/src/app/login/login.component.html
+++ b/angular-app/angular/src/app/login/login.component.html
@@ -2,12 +2,14 @@
     <div class="row login-row">
         <div class="col login-col">
             <!-- Logo -->
-            <div class="text-center mb-3">
-                <img src="/assets/stream-central-favicon-color.png" alt="logo" class="img-fluid">
+            <div class="text-center mb-5">
+                <!-- <img src="/assets/stream-central-favicon-color.png" alt="logo" class="img-fluid"> -->
+                <a [routerLink]="['']" class="navbar-brand fs-2 fw-bold text-info">
+                    StreamCentral</a>
             </div>
             <div class="text-center mb-5">
-                <h3 class="fw-bold">Log In</h3>
-                <p class="text-secondary">Get access to your account</p>
+                <h3>Log In</h3>
+                <p>Get access to your account</p>
             </div>
             <form (ngSubmit)="loginSubmit()">
                 <div class="input-group auth-username mb-3">
@@ -21,14 +23,14 @@
                 <div class="input-group mb-3 justify-content-around">
                     <div class="form-check">
                         <input type="checkbox" class="form-check-input" value="" id="formCheck">
-                        <label for="formCheck" class="form-check-label text-secondary"><small>Remember me</small></label>
+                        <label for="formCheck" class="form-check-label "><small>Remember me</small></label>
                     </div>
                     <div><small><a href="#">Forgot Password?</a></small></div>
                 </div>
-                <button class="btn btn-primary btn-lg w-100 mb-3">Login</button>
+                <button class="btn btn-info btn-lg w-100 mb-3">Login</button>
             </form>
             <div class="text-center">
-                <p class="text-secondary">Don't have an account? <a href="#">Sign Up</a></p>
+                <p>Don't have an account? <a href="#">Sign Up</a></p>
             </div>
         </div>
     </div>
