Added Sign-Up UI functionality, changes to auth.service.ts

--- a/angular-app/angular/src/app/homepage/homepage.component.html
+++ b/angular-app/angular/src/app/homepage/homepage.component.html
@@ -44,16 +44,12 @@
         </form>
     </div>
 </section>
-<section class="ad-section">
-    <section class="ad-section-container">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <img src="https://picsum.photos/1400/80" alt="ad-1" class="img-fluid">
-                </div>
-            </div>
+<section class="ad-section-container">
+    <div class="container text-bg-dark border border-info">
+        <div class="row">
+            <h1 class="text-center">This area is reserved for ads</h1>
         </div>
-    </section>
+    </div>
 </section>
 <section class="results p-4 border-bottom border-info">
     <div *ngIf="filteredContents.length == 0" class="no-favorites text-center" style="height: 100vh;">
