--- a/ng-app/stream-central/src/app/app.component.html
+++ b/ng-app/stream-central/src/app/app.component.html
@@ -8,6 +8,12 @@
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/movies">Movies</a>
+          </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/tvshows">TV Shows</a>
+            </li>
             <li class="nav-item me-5">
                 <a class="nav-link" routerLink="/favorites">Favorites List</a>
             </li>
@@ -27,7 +33,7 @@
 </div>
 <div class="main">
   <router-outlet />
-    <footer *ngIf="router.url !== '/login'"class="footer">
+    <footer class="footer">
       <div class="container-fluid p-5 border-top border-info">
         <p class="text-center">StreamCentral &copy; 2024</p>
       </div>
